ball 위치 랜덤 선정, 여러 ball 위치 전송

--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-joystick-component": "^1.4.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.3.2",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node ./src/server/main.js"
   },
   "eslintConfig": {
     "extends": [
